--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="ketuk_layar">Ketuk layar 2 kali untuk lanjut\natau swipe ke kiri untuk batal</string>
     <string name="perpustakaan">Perpustakaan\n</string>
     <string name="new_text">Perpustakaan\n</string>
-    <string name="dummy_text"> 5 meter lagi untuk mencapai perpustakaan</string>
+    <string name="lat"> lat</string>
+    <string name="lon"> lon</string>
+    <string name="azimuth">azimuth</string>
     <string name="sampai_dituju">Anda sudah sampai di tujuan</string>
     <string name="finishing">Ketuk layar 2 kali untuk mencari tujuan lain</string>
 </resources>
