connect to /shortest-path, vibrate the phone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="azimuth">azimuth</string>
     <string name="sampai_dituju">Anda sudah sampai di tujuan</string>
     <string name="finishing">Ketuk layar 2 kali untuk mencari tujuan lain</string>
+    <string name="id">id</string>
 </resources>
