add progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="sampai_dituju">Anda sudah sampai di tujuan</string>
     <string name="finishing">Ketuk layar 2 kali untuk mencari tujuan lain</string>
     <string name="id">id</string>
+    <string name="tujuan">tujuan\n</string>
 </resources>
